--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'GitHub Action for Uploading Release Assets'
+description: 'GitHub Action for Uploading Release Assets'
+author: 'Visual Collaboration Technologies'
 inputs:
   milliseconds: # change this
     required: true
