--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "typescript-action",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "private": true,
   "description": "TypeScript template action",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
@@ -30,7 +30,6 @@
   "devDependencies": {
     "@types/node": "^18.11.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "@vercel/ncc": "^0.31.1",
     "eslint": "^7.32.0",
     "eslint-plugin-github": "^4.3.2",
     "eslint-plugin-jest": "^25.3.2",
