--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^18.11.5",
     "@typescript-eslint/parser": "^5.41.0",
+    "@vercel/ncc": "^0.31.1",
     "eslint": "^8.26.0",
     "eslint-plugin-github": "^4.4.0",
     "eslint-plugin-jest": "^27.1.3",
