--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,36 @@ name: 'GitHub Action for Uploading Release Assets'
 description: 'GitHub Action for Uploading Release Assets'
 author: 'Visual Collaboration Technologies'
 inputs:
-  milliseconds: # change this
+  repo_token:
+    description: 'GitHub token.'
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    default: ${{ github.token }}
+  file:
+    description: 'Local file to upload.'
+    required: true
+  tag:
+    description: 'Tag to use as a release.'
+    required: true
+    default: ${{ github.ref }}
+  asset_name:
+    description: 'Name of the asset. When not provided will use the file name. Unused if file_glob is set to "true".'
+  overwrite:
+    description: 'Overwrite the release in case it already exists.'
+  file_glob:
+    description: 'If true the file can be a glob pattern, asset_name is ignored if this is true.'
+  prerelease:
+    description: 'Mark the release as a pre-release. Defaults to "false".'
+  release_name:
+    description: 'Explicitly set a release name. Defaults to empty which will cause the release to take the tag as name on GitHub.'
+  body:
+    description: 'Content of the release text. Empty by default.'
+  title:
+    description: 'Title of the body. Empty by default.'
+  repo_name:
+    description: 'Specify the name of the GitHub repository in which the GitHub release will be created, edited, and deleted. If the repository is other than the current, it is required to create a personal access token with `repo`, `user`, `admin:repo_hook` scopes to the foreign repository and add it as a secret. Defaults to the current repository'
+outputs:
+  browser_download_url:
+    description: 'The publicly available URL of the asset.'
 runs:
   using: 'node16'
   main: 'dist/index.js'
