--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.4.0",
+  "name": "upload-release-assets-action",
+  "version": "0.5.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "GitHub action to upload release assets",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,17 +15,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/vctmohan/upload-release-assets-action.git"
   },
   "keywords": [
     "actions",
-    "node",
-    "setup"
+    "upload",
+    "release",
+    "assets",
+    "asset"
   ],
-  "author": "",
+  "author": "Visual Collaboration Technologies Inc.",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@types/glob": "^8.0.0",
+    "glob": "^8.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.5",
