--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@octokit/rest": "19.0.5",
+    "@octokit/types": "8.0.0",
     "@types/glob": "^8.0.0",
     "glob": "^8.0.3"
   },
